[package]
name = "rps-studio"
version = "0.1.0"
edition = "2021"

[dependencies]
app_dirs2 = "2.5"
ash = "0.38"
ash-window = "0.13.0"
clap = { version = "4.5", features = ["derive"] }
eyre = "0.6"
naga = { version = "25", features = ["glsl-in", "spv-out"] }
strum = "0.27"
strum_macros = "0.27"
termcolor = "1.4.1"
thiserror = "2.0"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
winit = "0.30"
